// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Gallery
  direction="row"
  margin={2}
  onClick={[Function]}
  photos={
    Array [
      Object {
        "alt": "DSC02427",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
          "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
        ],
        "title": "DSC02427",
        "width": 1600,
      },
      Object {
        "alt": "bleik sólsetur",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
          "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
        ],
        "title": "bleik sólsetur",
        "width": 1600,
      },
      Object {
        "alt": "DSC02393",
        "height": 1023,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
        "srcSet": Array [
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
          "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
        ],
        "title": "DSC02393",
        "width": 1600,
      },
      Object {
        "alt": "DSC01594",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
          "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
        ],
        "title": "DSC01594",
        "width": 1600,
      },
      Object {
        "alt": "DSC01590",
        "height": 513,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
          "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
        ],
        "title": "DSC01590",
        "width": 1600,
      },
      Object {
        "alt": "DSC01570",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
          "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
        ],
        "title": "DSC01570",
        "width": 1600,
      },
      Object {
        "alt": "DSC01566",
        "height": 1083,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
          "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
        ],
        "title": "DSC01566",
        "width": 1600,
      },
    ]
  }
>
  <div
    className="react-photo-gallery--gallery"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Photo
        direction="row"
        index={0}
        key="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02427",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ],
            "title": "DSC02427",
            "width": 370.4,
          }
        }
      >
        <img
          alt="DSC02427"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02427"
          width={370.4}
        />
      </Photo>
      <Photo
        direction="row"
        index={1}
        key="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "bleik sólsetur",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ],
            "title": "bleik sólsetur",
            "width": 370.4,
          }
        }
      >
        <img
          alt="bleik sólsetur"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="bleik sólsetur"
          width={370.4}
        />
      </Photo>
      <Photo
        direction="row"
        index={2}
        key="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02393",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
            "srcSet": Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ],
            "title": "DSC02393",
            "width": 385.2,
          }
        }
      >
        <img
          alt="DSC02393"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
          srcSet={
            Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02393"
          width={385.2}
        />
      </Photo>
      <Photo
        direction="row"
        index={3}
        key="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01594",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ],
            "title": "DSC01594",
            "width": 276,
          }
        }
      >
        <img
          alt="DSC01594"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01594"
          width={276}
        />
      </Photo>
      <Photo
        direction="row"
        index={4}
        key="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01590",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ],
            "title": "DSC01590",
            "width": 574,
          }
        }
      >
        <img
          alt="DSC01590"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01590"
          width={574}
        />
      </Photo>
      <Photo
        direction="row"
        index={5}
        key="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01570",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ],
            "title": "DSC01570",
            "width": 276,
          }
        }
      >
        <img
          alt="DSC01570"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01570"
          width={276}
        />
      </Photo>
      <Photo
        direction="row"
        index={6}
        key="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01566",
            "height": 212.4,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ],
            "title": "DSC01566",
            "width": 314.3,
          }
        }
      >
        <img
          alt="DSC01566"
          height={212.4}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01566"
          width={314.3}
        />
      </Photo>
    </div>
  </div>
</Gallery>
`;

exports[`renders correctly after click 1`] = `
<Gallery
  direction="row"
  margin={2}
  onClick={[Function]}
  photos={
    Array [
      Object {
        "alt": "DSC02427",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
          "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
        ],
        "title": "DSC02427",
        "width": 1600,
      },
      Object {
        "alt": "bleik sólsetur",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
          "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
        ],
        "title": "bleik sólsetur",
        "width": 1600,
      },
      Object {
        "alt": "DSC02393",
        "height": 1023,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
        "srcSet": Array [
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
          "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
        ],
        "title": "DSC02393",
        "width": 1600,
      },
      Object {
        "alt": "DSC01594",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
          "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
        ],
        "title": "DSC01594",
        "width": 1600,
      },
      Object {
        "alt": "DSC01590",
        "height": 513,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
          "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
        ],
        "title": "DSC01590",
        "width": 1600,
      },
      Object {
        "alt": "DSC01570",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
          "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
        ],
        "title": "DSC01570",
        "width": 1600,
      },
      Object {
        "alt": "DSC01566",
        "height": 1083,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
          "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
        ],
        "title": "DSC01566",
        "width": 1600,
      },
    ]
  }
>
  <div
    className="react-photo-gallery--gallery"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Photo
        direction="row"
        index={0}
        key="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02427",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ],
            "title": "DSC02427",
            "width": 370.4,
          }
        }
      >
        <img
          alt="DSC02427"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02427"
          width={370.4}
        />
      </Photo>
      <Photo
        direction="row"
        index={1}
        key="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "bleik sólsetur",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ],
            "title": "bleik sólsetur",
            "width": 370.4,
          }
        }
      >
        <img
          alt="bleik sólsetur"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="bleik sólsetur"
          width={370.4}
        />
      </Photo>
      <Photo
        direction="row"
        index={2}
        key="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02393",
            "height": 246.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
            "srcSet": Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ],
            "title": "DSC02393",
            "width": 385.2,
          }
        }
      >
        <img
          alt="DSC02393"
          height={246.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
          srcSet={
            Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02393"
          width={385.2}
        />
      </Photo>
      <Photo
        direction="row"
        index={3}
        key="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01594",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ],
            "title": "DSC01594",
            "width": 276,
          }
        }
      >
        <img
          alt="DSC01594"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01594"
          width={276}
        />
      </Photo>
      <Photo
        direction="row"
        index={4}
        key="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01590",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ],
            "title": "DSC01590",
            "width": 574,
          }
        }
      >
        <img
          alt="DSC01590"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01590"
          width={574}
        />
      </Photo>
      <Photo
        direction="row"
        index={5}
        key="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01570",
            "height": 184,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ],
            "title": "DSC01570",
            "width": 276,
          }
        }
      >
        <img
          alt="DSC01570"
          height={184}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01570"
          width={276}
        />
      </Photo>
      <Photo
        direction="row"
        index={6}
        key="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01566",
            "height": 212.4,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ],
            "title": "DSC01566",
            "width": 314.3,
          }
        }
      >
        <img
          alt="DSC01566"
          height={212.4}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01566"
          width={314.3}
        />
      </Photo>
    </div>
  </div>
</Gallery>
`;

exports[`renders correctly if there are more columns than photos 1`] = `
<Gallery
  columns={10}
  direction="row"
  margin={2}
  onClick={[Function]}
  photos={
    Array [
      Object {
        "alt": "DSC02427",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
          "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
        ],
        "title": "DSC02427",
        "width": 1600,
      },
      Object {
        "alt": "bleik sólsetur",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
          "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
        ],
        "title": "bleik sólsetur",
        "width": 1600,
      },
      Object {
        "alt": "DSC02393",
        "height": 1023,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
        "srcSet": Array [
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
          "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
        ],
        "title": "DSC02393",
        "width": 1600,
      },
      Object {
        "alt": "DSC01594",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
          "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
        ],
        "title": "DSC01594",
        "width": 1600,
      },
      Object {
        "alt": "DSC01590",
        "height": 513,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
          "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
        ],
        "title": "DSC01590",
        "width": 1600,
      },
      Object {
        "alt": "DSC01570",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
          "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
        ],
        "title": "DSC01570",
        "width": 1600,
      },
      Object {
        "alt": "DSC01566",
        "height": 1083,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
          "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
        ],
        "title": "DSC01566",
        "width": 1600,
      },
    ]
  }
>
  <div
    className="react-photo-gallery--gallery"
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Photo
        direction="row"
        index={0}
        key="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02427",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ],
            "title": "DSC02427",
            "width": 95.8,
          }
        }
      >
        <img
          alt="DSC02427"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02427"
          width={95.8}
        />
      </Photo>
      <Photo
        direction="row"
        index={1}
        key="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "bleik sólsetur",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ],
            "title": "bleik sólsetur",
            "width": 95.8,
          }
        }
      >
        <img
          alt="bleik sólsetur"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="bleik sólsetur"
          width={95.8}
        />
      </Photo>
      <Photo
        direction="row"
        index={2}
        key="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02393",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
            "srcSet": Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ],
            "title": "DSC02393",
            "width": 99.7,
          }
        }
      >
        <img
          alt="DSC02393"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
          srcSet={
            Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC02393"
          width={99.7}
        />
      </Photo>
      <Photo
        direction="row"
        index={3}
        key="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01594",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ],
            "title": "DSC01594",
            "width": 95.8,
          }
        }
      >
        <img
          alt="DSC01594"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01594"
          width={95.8}
        />
      </Photo>
      <Photo
        direction="row"
        index={4}
        key="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01590",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ],
            "title": "DSC01590",
            "width": 199.4,
          }
        }
      >
        <img
          alt="DSC01590"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01590"
          width={199.4}
        />
      </Photo>
      <Photo
        direction="row"
        index={5}
        key="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01570",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ],
            "title": "DSC01570",
            "width": 95.8,
          }
        }
      >
        <img
          alt="DSC01570"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01570"
          width={95.8}
        />
      </Photo>
      <Photo
        direction="row"
        index={6}
        key="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01566",
            "height": 63.9,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ],
            "title": "DSC01566",
            "width": 94.6,
          }
        }
      >
        <img
          alt="DSC01566"
          height={63.9}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "margin": 2,
            }
          }
          title="DSC01566"
          width={94.6}
        />
      </Photo>
    </div>
  </div>
</Gallery>
`;

exports[`renders correctly with direction set to column 1`] = `
<Gallery
  direction="column"
  margin={2}
  onClick={[Function]}
  photos={
    Array [
      Object {
        "alt": "DSC02427",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
          "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
          "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
        ],
        "title": "DSC02427",
        "width": 1600,
      },
      Object {
        "alt": "bleik sólsetur",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
          "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
          "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
        ],
        "title": "bleik sólsetur",
        "width": 1600,
      },
      Object {
        "alt": "DSC02393",
        "height": 1023,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
        "srcSet": Array [
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
          "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
          "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
        ],
        "title": "DSC02393",
        "width": 1600,
      },
      Object {
        "alt": "DSC01594",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
          "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
          "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
        ],
        "title": "DSC01594",
        "width": 1600,
      },
      Object {
        "alt": "DSC01590",
        "height": 513,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
          "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
          "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
        ],
        "title": "DSC01590",
        "width": 1600,
      },
      Object {
        "alt": "DSC01570",
        "height": 1065,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
        "srcSet": Array [
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
          "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
          "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
        ],
        "title": "DSC01570",
        "width": 1600,
      },
      Object {
        "alt": "DSC01566",
        "height": 1083,
        "sizes": Array [
          "(min-width: 480px) 50vw",
          "(min-width: 1024px) 33.3vw",
          "100vw",
        ],
        "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
        "srcSet": Array [
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
          "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
          "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
        ],
        "title": "DSC01566",
        "width": 1600,
      },
    ]
  }
>
  <div
    className="react-photo-gallery--gallery"
  >
    <div
      style={
        Object {
          "height": 636.2,
          "position": "relative",
        }
      }
    >
      <Photo
        direction="column"
        index={0}
        key="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
        left={0}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02427",
            "height": 249.8,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ],
            "title": "DSC02427",
            "width": 375.3,
          }
        }
        top={0}
      >
        <img
          alt="DSC02427"
          height={249.8}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae.jpg 500w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_c.jpg 800w",
              "https://farm6.staticflickr.com/5638/20770219315_50e1c69aae_b.jpg 1024w",
              "https://farm6.staticflickr.com/5638/20770219315_0443da777d_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 0,
              "margin": 2,
              "position": "absolute",
              "top": 0,
            }
          }
          title="DSC02427"
          width={375.3}
        />
      </Photo>
      <Photo
        direction="column"
        index={1}
        key="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
        left={379.3}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "bleik sólsetur",
            "height": 249.8,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ],
            "title": "bleik sólsetur",
            "width": 375.3,
          }
        }
        top={0}
      >
        <img
          alt="bleik sólsetur"
          height={249.8}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19.jpg 500w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_c.jpg 800w",
              "https://farm6.staticflickr.com/5825/20149281203_0335e3ed19_b.jpg 1024w",
              "https://farm6.staticflickr.com/5825/20149281203_16cdbb86d5_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 379.3,
              "margin": 2,
              "position": "absolute",
              "top": 0,
            }
          }
          title="bleik sólsetur"
          width={375.3}
        />
      </Photo>
      <Photo
        direction="column"
        index={2}
        key="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
        left={758.7}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC02393",
            "height": 240,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg",
            "srcSet": Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ],
            "title": "DSC02393",
            "width": 375.3,
          }
        }
        top={0}
      >
        <img
          alt="DSC02393"
          height={240}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg"
          srcSet={
            Array [
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45.jpg 500w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_c.jpg 800w",
              "https://farm1.staticflickr.com/760/20147663824_3767d70a45_b.jpg 1024w",
              "https://farm1.staticflickr.com/760/20147663824_bb6ffff6e6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 758.7,
              "margin": 2,
              "position": "absolute",
              "top": 0,
            }
          }
          title="DSC02393"
          width={375.3}
        />
      </Photo>
      <Photo
        direction="column"
        index={3}
        key="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
        left={758.7}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01594",
            "height": 249.8,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ],
            "title": "DSC01594",
            "width": 375.3,
          }
        }
        top={244}
      >
        <img
          alt="DSC01594"
          height={249.8}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781.jpg 500w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_c.jpg 800w",
              "https://farm6.staticflickr.com/5609/15605220721_1049ac2781_b.jpg 1024w",
              "https://farm6.staticflickr.com/5609/15605220721_af9706fda6_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 758.7,
              "margin": 2,
              "position": "absolute",
              "top": 244,
            }
          }
          title="DSC01594"
          width={375.3}
        />
      </Photo>
      <Photo
        direction="column"
        index={4}
        key="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
        left={0}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01590",
            "height": 120.3,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ],
            "title": "DSC01590",
            "width": 375.3,
          }
        }
        top={253.8}
      >
        <img
          alt="DSC01590"
          height={120.3}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81.jpg 500w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_c.jpg 800w",
              "https://farm4.staticflickr.com/3944/14987740533_b8432e4c81_b.jpg 1024w",
              "https://farm4.staticflickr.com/3944/14987740533_559154cfd8_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 0,
              "margin": 2,
              "position": "absolute",
              "top": 253.8,
            }
          }
          title="DSC01590"
          width={375.3}
        />
      </Photo>
      <Photo
        direction="column"
        index={5}
        key="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
        left={379.3}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01570",
            "height": 249.8,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg",
            "srcSet": Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ],
            "title": "DSC01570",
            "width": 375.3,
          }
        }
        top={253.8}
      >
        <img
          alt="DSC01570"
          height={249.8}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg"
          srcSet={
            Array [
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573.jpg 500w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_c.jpg 800w",
              "https://farm6.staticflickr.com/5612/15584207196_cc5a59a573_b.jpg 1024w",
              "https://farm6.staticflickr.com/5612/15584207196_51d672b3e2_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 379.3,
              "margin": 2,
              "position": "absolute",
              "top": 253.8,
            }
          }
          title="DSC01570"
          width={375.3}
        />
      </Photo>
      <Photo
        direction="column"
        index={6}
        key="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
        left={0}
        margin={2}
        onClick={[Function]}
        photo={
          Object {
            "alt": "DSC01566",
            "height": 254.1,
            "sizes": Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ],
            "src": "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg",
            "srcSet": Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ],
            "title": "DSC01566",
            "width": 375.3,
          }
        }
        top={378.1}
      >
        <img
          alt="DSC01566"
          height={254.1}
          onClick={[Function]}
          sizes={
            Array [
              "(min-width: 480px) 50vw",
              "(min-width: 1024px) 33.3vw",
              "100vw",
            ]
          }
          src="https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg"
          srcSet={
            Array [
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68.jpg 500w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_c.jpg 800w",
              "https://farm4.staticflickr.com/3948/15421251759_79587a5f68_b.jpg 1024w",
              "https://farm4.staticflickr.com/3948/15421251759_0091d2645c_h.jpg 1600w",
            ]
          }
          style={
            Object {
              "cursor": "pointer",
              "left": 0,
              "margin": 2,
              "position": "absolute",
              "top": 378.1,
            }
          }
          title="DSC01566"
          width={375.3}
        />
      </Photo>
    </div>
  </div>
</Gallery>
`;
